@@ -1,6 +1,7 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
 	* adding support for dimension casting
-	* allowing storing client attributes of numewric types
+	* fetching a shape of the client datasource from the global JSON string
+	* allowing storing client attributes of numeric types
 	* adding tests
 	* tagged as 1.0.8
 
